# BlueDjinnGambling

./: CMakeLists.txt  main.cpp
BD_Core/inc/: BD_Core_curl.hpp
BD_Core/src/: BD_Core.cpp  BD_Core_curl.cpp
BD_Examples/TCC/: main.cpp
BD_Graphics/: CMakeLists.txt
BD_Graphics/inc/: BD_Curl.hpp  BD_Game.hpp  BD_Graphics.hpp  BD_Images.hpp  BD_ResourceManager.hpp  BD_SpriteRenderer.hpp  BD_TextRenderer.hpp  shader_s.h
BD_Graphics/src/: BD_Curl.cpp  BD_Font.cpp  BD_Game.cpp  BD_Graphics.cpp  BD_Images.cpp  BD_ResourceManager.cpp  BD_Shader.cpp  BD_SpriteRenderer.cpp  BD_TextRenderer.cpp
